--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -42,7 +42,7 @@ layout: bare
 <section id="aboutme">
 	<div class="container">
 		<div class="row section-heading">
-			<span>About Me</span>
+			<h1><span>About Me</span></h1>
 		</div>
 		<div class="row education">
 			<img src="{% asset_path portfolio/education-crop.png %}" alt="EducationBackground" />
@@ -56,7 +56,7 @@ layout: bare
 			<img src="{% asset_path portfolio/workexperience-crop.png %}" alt="WorkExperience" />
 		</div>
 		<div class="row section-heading">
-			<span>Work Experience</span>
+			<h1><span>Work Experience</span></h1>
 		</div>
 	</div>
 </section>
@@ -64,7 +64,7 @@ layout: bare
 <section id="skills">
 	<div class="container">
 		<div class="row section-heading">
-			<span>Skills</span>
+			<h1><span>Skills</span></h1>
 		</div>
 		<div class="row myskills animatedParent">
 			<img class="animated fadeInUpShort" src="{% asset_path portfolio/skillsnocubes.png %}" alt="MySkills" />
@@ -75,7 +75,7 @@ layout: bare
 <section id="projects">
 	<div class="container">
 		<div class="row section-heading">
-			<span>Projects</span>
+			<h1><span>Projects</span></h1>
 		</div>
 		<p>Work in Progress</p>
 		<!-- <div class="row">
@@ -123,7 +123,7 @@ layout: bare
 <section id="resume">
 	<div class="container">
 		<div class="row">
-			<span>Download Resume</span>
+			<h1><span>Download Resume</span></h1>
 
 			<a href="{{ site.url }}/download/test.pdf" target="_blank"><i class="fa fa-download" aria-hidden="true"></i></a>
 			
@@ -131,18 +131,14 @@ layout: bare
 	</div>
 </section>
 
-<section id="interests">
+<section id="interests" class="parallax">
 	<div class="container">
-		<div class="row section-heading">
-			<span>Interests</span>
+		<div class="row interests-heading">
+			<h1>Things that <br>
+			keep me going</h1>
 		</div>
 		<div class="row">
-			<div class="col-md-6">
-				<img src="http://placehold.it/350x150">
-			</div>
-			<div class="col-md-6">
-				<img src="http://placehold.it/350x150">
-			</div>
+			<a href="http://kohrongying.github.io/photography/" class="btn btn-default">See More</a>
 		</div>
 	</div>
 </section>
@@ -150,7 +146,7 @@ layout: bare
 <section id="contact">
 	<div class="container">
 		<div class="row section-heading">
-			<span>Contact Me</span>
+			<h1><span>Contact Me</span></h1>
 		</div>
 	</div>
 </section>
