Add favicon, logo. Pagination for photog

--- a/photography/index.html
+++ b/photography/index.html
@@ -13,15 +13,38 @@ layout: bare
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                    <h1>RONG</h1>
+                    <img src="{% asset_path rong-logo.png %}" alt="EducationBackground" />
                 </li>
                 <li>
-                    <h4>About</h4>
+
+					<nav aria-label="Page navigation">
+					  <ul class="pagination pagination-sm">
+					    <li>
+					      <a href="#" aria-label="Previous">
+					        <span aria-hidden="true">&laquo;</span>
+					      </a>
+					    </li>
+					    <li><a href="#">1</a></li>
+					    <li><a href="#">2</a></li>
+					    <li><a href="#">3</a></li>
+					    <li><a href="#">4</a></li>
+					    <li><a href="#">5</a></li>
+					    <li>
+					      <a href="#" aria-label="Next">
+					        <span aria-hidden="true">&raquo;</span>
+					      </a>
+					    </li>
+					  </ul>
+					</nav>
+
+                </li>
+                <li>
+                    <h5>About</h5>
                     <p>Living in a tiny red dot</p>
                     <p>Still searching</p>
                 </li>
                 <li>
-                	<h4>Contact</h4>
+                	<h5>Contact</h5>
                 	<p>kohrongying@gmail.com</p>
                 </li>
                 
@@ -30,7 +53,8 @@ layout: bare
         <!-- /#sidebar-wrapper -->
 
         <!-- Page Content -->
-        <div id="page-content-wrapper" class="page-content-wrapper">
+        <div id="page-content-wrapper">
+        	<div class="page-content-wrapper">
 <!--             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
@@ -38,12 +62,23 @@ layout: bare
                     </div>
                 </div>
             </div> -->
-        	<div class="one">One</div>
-		  <div class="two">Two</div>
-		  <div class="three">Three</div>
-		  <div class="four">Four</div>
-		  <div class="five">Five</div>
-		  <div class="six">Six</div>
+	          <div class="one">One</div>
+			  <div class="two">Two</div>
+			  <div class="three">Three</div>
+			  <div class="four">Four</div>
+			  <div class="five">Five</div>
+			  <div class="six">Six</div>
+
+			</div>
+
+		  <div id="1"></div>
+		  <div id="1"></div>
+		  <div id="1"></div>
+		  <div id="1"></div>
+		  <div id="1"></div>
+		  
+
+
         </div>
         <!-- /#page-content-wrapper -->
 
