--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -32,14 +32,18 @@ layout: bare
 	      </div>
 	</nav> -->
 	<div class="container clearfix">
+        <div class="col-md-4">
         <span id="logo">
-            LOGO
+            <img src="{% asset_path rong-logo.png %}" alt="EducationBackground" />
         </span>
+        </div>
+        <div class="col-md-8">
         <nav>
             <a href="#aboutme" class="hover6">About</a>
             <a href="#resume" class="hover6">Resume</a>
             <a href="#contact" class="hover6">Contact</a>
         </nav>
+        </div>
     </div>
 </header>
 
