Added seo, robots.txt and sitemap

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -2,6 +2,9 @@
 title: Portfolio
 permalink: /portfolio/
 layout: bare
+description: Rong Ying Portfolio
+lang: English
+
 ---
 {% contentfor scripts %}
     {% stylesheet portfolio %}
